# asnfuzzgen

./: Cargo.toml  README.md  extract_ngap_proto_ies.py  extract_s1ap_proto_ies.py
asnfuzzgen/: Cargo.toml
asnfuzzgen/src/: compiler.rs  error.rs
asnfuzzgen/src/generator/: int.rs
asnfuzzgen/src/generator/asn/: values.rs
asnfuzzgen/src/generator/asn/types/: int.rs
asnfuzzgen/src/generator/asn/types/base/: bitstring.rs  boolean.rs  charstring.rs  enumerated.rs  integer.rs  null.rs  octetstring.rs  oid.rs
asnfuzzgen/src/generator/asn/types/constructed/: choice.rs  seq.rs  seqof.rs
asnfuzzgen/src/parser/asn/: defs.rs  module.rs
asnfuzzgen/src/parser/asn/structs/: module.rs
asnfuzzgen/src/parser/asn/structs/types/: base.rs
asnfuzzgen/src/parser/asn/types/: int.rs
asnfuzzgen/src/parser/asn/types/constructed/: choice.rs  seq.rs
asnfuzzgen/src/resolver/: int.rs
asnfuzzgen/src/resolver/asn/types/: constructed.rs  ioc.rs
asnfuzzgen/src/resolver/asn/types/base/: charstring.rs  integer.rs  mod.rs
asnfuzzgen/tests/: mod.rs
codecs/: Cargo.toml
codecs/src/: lib.rs
codecs/src/per/: mod.rs
codecs/src/per/aper/decode/: decode_charstrings.rs  mod.rs
codecs/src/per/aper/encode/: mod.rs
codecs/src/per/common/decode/: decode_internal.rs  mod.rs
codecs/src/per/common/encode/: encode_internal.rs  mod.rs
codecs/src/per/uper/decode/: decode_charstrings.rs  mod.rs
codecs/src/per/uper/encode/: mod.rs
codecs_derive/: Cargo.toml
codecs_derive/src/per/: bitstring.rs  boolean.rs  charstring.rs  choice.rs  enumerated.rs  integer.rs  null.rs  octetstring.rs  oid.rs  open.rs  seq.rs  seqof.rs
codecs_derive/tests/: 01-choice.rs  02-integer.rs  03-enumerated.rs  04-bitstring.rs  05-octetstring.rs  06-charstring.rs  07-null.rs  08-seq.rs  09-open.rs  10-seqof.rs  11-issue-59.rs
examples/: Cargo.toml  build.rs
examples/benches/: ngap.rs  ngap_bench.rs
examples/tests/: 11-ranap.rs  12-s1ap.rs  13-ngap.rs  16-example.rs
