[package]
name = "asnfuzzgen"
version = "0.1.0"
authors = ["Nathaniel Bennett <me[at]nathanielbennett[dotcom]>"]
edition = "2018"
categories = ["development-tools::testing"]
description = "ASN.1 Structure-Aware Fuzzing Compiler."
keywords = ["asn1", "per", "fuzzing"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathaniel-bennett/asnfuzzgen"
include = ["src/**/*.rs", "README.md", "ARChITECTURE.md", "Cargo.toml", "LICENSE", "LICENSE-MIT", "LICENSE-Apache2"]

[dependencies]
lazy_static = { version = "1.4.0" }
topological-sort = { version = "0.1" }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
heck = { version = "0.4" }
bitvec = { version = "1.0" }
clap = { version = "4.0.10", features = ["derive"] }
docx-rs = { version = "0.4.5" , optional = true }
regex = { version = "1.6.0" }
log = { version = "0.4" }
env_logger = { version = "0.10" }

[[bin]]
name = "asnfuzzgen"
path = "src/bin/asnfuzzgen.rs"
