[package]
name = "asnfuzzgen-codecs-derive"
version = "0.1.2"
authors = ["Nathaniel Bennett <me[at]nathanielbennett[dotcom]>"]
description = "ASN.1 Codecs derive macros"
categories = ["development-tools::testing"]
keywords = ["asn1", "per", "fuzzing"]

edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathaniel-bennett/asnfuzzgen"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "LICENSE-MIT", "LICENSE-Apache2", "README.md"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
log = { version = "0.4" }
asnfuzzgen-codecs = { path = "../codecs" , version = "=0.1.2"}
bitvec = { version = "1.0" }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "1.0" , features = ["extra-traits"]}

[dev-dependencies]
trybuild = { version = "1.0" }
hex =  { version = "0.4" }
